--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <ul id="game_ul">
+        <li>Add Game</li>
+        <li>Chess</li>
+        <li>Poker</li>
+        <li>Scrabble</li>
+    </ul>
 
 
 
 
-<script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript" src="js/script2.js"></script>
 
 </body>
